@@ -395,7 +395,9 @@ class MeetingGroup(BaseContent, BrowserDefaultMixin):
         res = self.getField('itemAdviceStates').get(self, **kwargs)
 
         if cfg:
-            if not res:
+            givenCfgId = cfg.getId()
+            # nothing redefined or nothing redefined for the given p_cfg, use p_cfg values
+            if not res or not [v for v in res if v.startswith('{0}__state__'.format(givenCfgId))]:
                 res = cfg.getItemAdviceStates()
             else:
                 tmpres = []
@@ -412,7 +414,8 @@ class MeetingGroup(BaseContent, BrowserDefaultMixin):
         '''See docstring of method MeetingGroup.getItemAdviceStates.'''
         res = self.getField('itemAdviceEditStates').get(self, **kwargs)
         if cfg:
-            if not res:
+            givenCfgId = cfg.getId()
+            if not res or not [v for v in res if v.startswith('{0}__state__'.format(givenCfgId))]:
                 res = cfg.getItemAdviceEditStates()
             else:
                 tmpres = []
@@ -429,11 +432,11 @@ class MeetingGroup(BaseContent, BrowserDefaultMixin):
         '''See docstring of method MeetingGroup.getItemAdviceStates.'''
         res = self.getField('itemAdviceViewStates').get(self, **kwargs)
         if cfg:
-            if not res:
+            givenCfgId = cfg.getId()
+            if not res or not [v for v in res if v.startswith('{0}__state__'.format(givenCfgId))]:
                 res = cfg.getItemAdviceViewStates()
             else:
                 tmpres = []
-                givenCfgId = cfg.getId()
                 for elt in res:
                     cfgId, state = elt.split('__state__')
                     if cfgId == givenCfgId:
